tests/expectations/compiler/async_blocks/future_not_all_passed_to_async_block_fail.out
Error [ETYC0372104]: Not all futures were consumed: f1
    --> compiler-test:16:16
     |
  16 |         return async {
     |                ^^^^^^^
  17 |             f0.await(); 
     |             ^^^^^^^^^^^^
  18 |             f3.await(); 
     |             ^^^^^^^^^^^^
  19 |             f2.await(); 
     |             ^^^^^^^^^^^^
  20 |             f5.await(); 
     |             ^^^^^^^^^^^^
  21 |             f4.await();
     |             ^^^^^^^^^^^
  22 |         };
     |         ^
     |
     = Make sure all futures are consumed exactly once. Consume by passing to an async function call or async block.
